--- a/client/src/css/PetProfile.css
+++ b/client/src/css/PetProfile.css
@@ -386,3 +386,17 @@
   display: inline-block;
 }
 
+
+.detail-item input[type="date"] {
+  position: relative;
+  width: 100%;
+}
+
+.detail-item input[type="date"]::-webkit-calendar-picker-indicator {
+  position: absolute;
+  right: 0px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
